fix for this issue, https://github.com/twbs/bootstrap/issues/10073 (svg distorting when using .img-responsive in IE 10)

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -479,10 +479,10 @@ ul.social-but-img li a {
     transition: all .3s;
 }
 
-.img-iconimg {
-    width: 40px;
-    height: 40px;
+.img-responsive-iconimg {
+    width:100% \9;
     max-width:100%;
+    height:auto
 }
 
 .address {
